# constellations

./: 1_HYG_data_exploration.ipynb  README.md  constellation-vectors.py  data-exploration.py  explore-stellarium.py  messy-data.py  pyproject.toml
