[tool.poetry]
name = "constellations"
version = "0.1.0"
description = ""
authors = ["Jingwen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
Cartopy = "^0.22.0"
pandas = "^2.1.4"
glob2 = "^0.7"
jupyter = "^1.0.0"
pyright = "^1.1.341"
watermark = "^2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
